tests/NormalTests/paczka1/small_fuzzy/54474117.err
Error in line 2: RUpQ9Qw7IM S23 28,2
Error in line 10: cDtX0S A784 17,5
Error in line 9: RUpQ9Qw7IM A784 96,7
